Step 3: Create Add Pet Form for adding pets using Flask-WTF / Step 4: Create Handler for Add Pet Form => Validate the form for add a pet, if it does validate, it should create the new pet, and redirect to the homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,15 @@
     <div class="row">
         <h1 class="display-5">Pets</h1>
     </div>
+
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for msg in messages %}
+    <div class="alert alert-success" role="alert">{{ msg }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
     <div class="row">
         {% for pet in pets %}
         <div class="col mt-2">
@@ -17,7 +26,7 @@
         {% endfor %}
     </div>
     <div class="mt-2">
-        <a class="btn btn-success" href="#" role="button">Add a Pet</a>
+        <a class="btn btn-success" href="/add" role="button">Add a Pet</a>
     </div>
 </div>
 {% endblock %}
