--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,10 @@
     {% endwith %}
 
     <div class="row">
-        {% for pet in pets %}
+        <h3>Pets availables:</h3>
+    </div>
+    <div class="row">
+        {% for pet in pets_availables %}
         <div class="col mt-2">
             <a href="/{{ pet.id }}"><img src="{{ pet.photo_url }}" class="img-thumbnail" alt="{{ pet.name }}"></a>
             <p class="text-start mt-2"><span class="pet_name">{{ pet.name }}</span> <span class="pet_available">is {% if pet.available is false %} not {% endif %} available!</span></p>
@@ -27,6 +30,18 @@
     </div>
     <div class="mt-2">
         <a class="btn btn-success" href="/add" role="button">Add a Pet</a>
+    </div>
+
+    <div class="row mt-5">
+        <h3>Pets no longer availables:</h3>
+    </div>
+    <div class="row">
+        {% for pet in pets_no_availables %}
+        <div class="col mt-2">
+            <a href="/{{ pet.id }}"><img src="{{ pet.photo_url }}" class="img-thumbnail" alt="{{ pet.name }}"></a>
+            <p class="text-start mt-2"><span class="pet_name">{{ pet.name }}</span> <span class="pet_available">is {% if pet.available is false %} not {% endif %} available!</span></p>
+        </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
